apps/containerssh/containerssh-guests/containerssh-guests-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: containerssh-guests
spec:
  type: ClusterIP
  selector:
    app: containerssh-guests
  ports:
    - name: http
      port: 80
