apps/containerssh/containerssh-guests/containerssh-guests-webserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserver-proxy
spec:
  selector:
    app: webserver-proxy
  type: ClusterIP
  ports:
    - name: http
      port: 80
